--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,5 @@
 <resources>
     <string name="app_name">PhonePractice</string>
-    <string name="article_title">Jetpack Compose tutorial</string>
-    <string name="article_p1">Jetpack Compose is a modern toolkit for building native Android UI. Compose simplifies and accelerates UI development on Android with less code, powerful tools, and intuitive Kotlin APIs.</string>
-    <string name="article_p2">In this tutorial, you build a simple UI component with declarative functions. You call Compose functions to say what elements you want and the Compose compiler does the rest. Compose is built around Composable functions. These functions let you define your app\'s UI programmatically because they let you describe how it should look and provide data dependencies, rather than focus on the process of the UI\'s construction, such as initializing an element and then attaching it to a parent. To create a Composable function, you add the @Composable annotation to the function name.</string>
     <string name="quadrant_title1">Text composable</string>
     <string name="quadrant_content1">Displays text and follows the recommended Material Design guidelines.</string>
     <string name="quadrant_title2">Text composable</string>
@@ -11,4 +8,12 @@
     <string name="quadrant_content3">Displays text and follows the recommended Material Design guidelines.</string>
     <string name="quadrant_title4">Text composable</string>
     <string name="quadrant_content4">Displays text and follows the recommended Material Design guidelines.</string>
+    <string name="lemon_tree_content">Tap the lemon tree to select a lemon</string>
+    <string name="lemon_squeeze_content">Keep tapping the lemon to squeeze it</string>
+    <string name="lemon_drink_content">Tap the lemonade to drink it</string>
+    <string name="lemon_restart_content">Tap the empty glass to start again</string>
+    <string name="lemon_tree_title">Lemon tree</string>
+    <string name="lemon_squeeze_title">Lemon</string>
+    <string name="lemon_drink_title">Glass of Lemonade</string>
+    <string name="lemon_restart_title">Empty Glass</string>
 </resources>
