--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,9 @@
     <string name="exit">Exit</string>
     <string name="play_again">Play Again</string>
     <string name="wrong_guess">Wrong Guess!</string>
+
+    <string name="loading_failed">Loading Failed</string>
+    <string name="loading">Loading</string>
+    <string name="placeholder_result">Placeholder Here</string>
+
 </resources>
